# web_chat

back/: .gitignore  Cargo.toml
back/src/: lib.rs  main.rs
client/: auth.css  auth.html  buttons.js  chat.css  chat.html  index.html  package-lock.json  package.json  profile.html  style.css
client/scripts/: auth.js  buttons.js  paths.js
front/: index.html
server/: Cargo.toml  diesel.toml
server/migrations/: 20250713081722_create_tables.sql  20250714182424_create_tables.sql
server/migrations/2025-07-12-113635_create_users/: up.sql
server/migrations/2025-07-12-114402_create_profiles/: down.sql  up.sql
server/migrations/2025-07-12-114814_create_messages/: down.sql  up.sql
server/migrations/2025-07-12-115117_create_tags/: down.sql  up.sql
server/migrations/2025-07-12-115307_create_profiles_tags/: down.sql  up.sql
server/src/: app_error.rs  data.rs  lib.rs  main.rs  queries.rs  router.rs  schema.rs
server/src/architecture/controllers/: profile_controller.rs  user_controller.rs
server/src/architecture/middlewares/: auth.rs
server/src/architecture/repositories/: user_repository.rs
server/src/architecture/routers/: check_session.rs  mod.rs  profile_routers.rs
server/src/architecture/services/: user_service.rs
server/src/controllers/: user_controller.rs
server/src/middlewares/: auth.rs
server/src/models/: message.rs  mod.rs  profile.rs  profile_tag.rs  roles.rs  tag.rs  user.rs
server/src/repositories/: user_repository.rs
server/src/routers/: user_router.rs
server/src/services/: user_service.rs
server/src/utils/: jwt.rs
(+5 files in other folders)
