[package]
name = "server"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-ws = "0.3.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140" 

tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
 
thiserror = "2.0.12"
anyhow = "1.0.98"
